--- a/gooverseas/marketing/marketing.html
+++ b/gooverseas/marketing/marketing.html
@@ -61,22 +61,83 @@
 	</div>
 </section>
 
-<section class="ftco-section">
+
+
+
+<section class="ftco-section bg-light">
 	<div class="container">
-		<div class="row">
-			<div class="col-lg-12 ftco-animate">
+		<div id = "rowBlogs" class="row" class = "wrapper">
 
-				<p>
 
-				</p>
-
+			<div class="col-md-12 col-lg-4 ftco-animate">
+				<div class="blog-entry">
+					<a class="block-20 d-flex align-items-end" style="background-image: url('1.jpg');">
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a>营销策划</a></h3>
+						<p>睿泽国际为企业在伊比利亚半岛境内提供营销活动策划，包括场地设计、物料设计等。</p>
+					</div>
+				</div>
 			</div>
+
+
+			<div class="col-md-12 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a class="block-20 d-flex align-items-end" style="background-image: url('2.jpg');">
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a>营销执行</a></h3>
+						<p>营销执行包括场地租赁、场地布置、物料制作、活动现场服务等。</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-12 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a class="block-20 d-flex align-items-end" style="background-image: url('digital-marketing.jpg');">
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a>数字营销</a></h3>
+						<p>为企业针对欧洲市场提供数字营销服务。</p>
+					</div>
+				</div>
+			</div>
+
 		</div>
 	</div>
-
 </section>
 
 
+<section class="ftco-intro" style="background-image: url(../1.jpg);" data-stellar-background-ratio="0.5">
+	<div class="overlay"></div>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 suscribete_form">
+				<h2>商业洽谈请扫码联系</h2>
+				<div class="container-wrap">
+					<div class="row no-gutters">
+
+						<div class="col-md-6 ftco-animate">
+							<a class="gallery image-popup img d-flex align-items-center" style="background-image: url(../../images/whatsapp.png);">
+								<div class="icon mb-4 d-flex align-items-center justify-content-center">
+									<p><img src="../../images/whatsappQRCode.png" style="width: auto; height: 50%"></p>
+								</div>
+							</a>
+						</div>
+
+						<div class="col-md-6 ftco-animate">
+							<a class="gallery image-popup img d-flex align-items-center" style="background-image: url(../../images/wechat.png);">
+								<div class="icon mb-4 d-flex align-items-center justify-content-center">
+									<p><img src="../../images/wechatQRCode.jpg" style="width: auto; height: 50%"></p>
+								</div>
+							</a>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
 
 <footer class="ftco-footer ftco-bg-dark ftco-section">
 	<div class="container">
