--- a/gooverseas/admin/admin.html
+++ b/gooverseas/admin/admin.html
@@ -99,8 +99,41 @@
 			</div>
 
 		</div>
+	</div>
 </section>
 
+
+<section class="ftco-intro" style="background-image: url(../1.jpg);" data-stellar-background-ratio="0.5">
+	<div class="overlay"></div>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 suscribete_form">
+				<h2>商业洽谈请扫码联系</h2>
+				<div class="container-wrap">
+					<div class="row no-gutters">
+
+						<div class="col-md-6 ftco-animate">
+							<a class="gallery image-popup img d-flex align-items-center" style="background-image: url(../../images/whatsapp.png);">
+								<div class="icon mb-4 d-flex align-items-center justify-content-center">
+									<p><img src="../../images/whatsappQRCode.png" style="width: auto; height: 50%"></p>
+								</div>
+							</a>
+						</div>
+
+						<div class="col-md-6 ftco-animate">
+							<a class="gallery image-popup img d-flex align-items-center" style="background-image: url(../../images/wechat.png);">
+								<div class="icon mb-4 d-flex align-items-center justify-content-center">
+									<p><img src="../../images/wechatQRCode.jpg" style="width: auto; height: 50%"></p>
+								</div>
+							</a>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
 
 
 <footer class="ftco-footer ftco-bg-dark ftco-section">
