add huawei seguro product page

--- a/investment/mapfre/mapfre_seguro.html
+++ b/investment/mapfre/mapfre_seguro.html
@@ -69,17 +69,24 @@
 
 			<div class="col-md-6 col-lg-4 ftco-animate">
 				<div class="blog-entry">
-					<a href="salud.html" class="block-20 d-flex align-items-end" style="background-image: url('salud.jpg');">
+					<a href="patrimonio.html" class="block-20 d-flex align-items-end" style="background-image: url('salud.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">公司业务</span>
-							<span class="yr">医疗保险</span>
+							<span class="yr">资产保险</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="salud.html">MAPFRE医疗保险</a></h3>
-						<p href="salud.html">MAPFRExxxxxxxx。</p>
+						<h3 class="heading"><a href="salud.html">MAPFRE资产保护保险</a></h3>
+						<p>MAPFRE 资产保护解决方案（Soluciones para la protección del patrimonio）。</p>
+						<p>-工业和服务保险 Seguro para Industrias y Servicios</p>
+						<p>-商业保险 Seguro para Comercios</p>
+						<p>-农业公司 Empresas Agropecuarias</p>
+						<p>-车辆保险 Seguro para Vehículos</p>
+						<p>-机械电子设备 Maquinaria y Equipos Electrónicos</p>
+						<p>-建筑保险 Seguros para la Construcción</p>
+						<p>-运输、船体和航空 Transporte, Cascos y Aviación</p>
 						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="salud.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="mb-0"><a href="patrimonio.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
 					</div>
 				</div>
@@ -88,17 +95,24 @@
 
 			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a href="coche.html" class="block-20 d-flex align-items-end" style="background-image: url('coche.jpg');">
+					<a href="terceros.html" class="block-20 d-flex align-items-end" style="background-image: url('coche.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">公司业务</span>
-							<span class="yr">汽车保险</span>
+							<span class="yr">民事责任保险</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 href="coche.html" class="heading"><a href="#">MAPFRE汽车保险</a></h3>
-						<p >MAPFRE汽车保险XXXXXXXXXXXXXXXXX</p>
+						<h3 href="terceros.html" class="heading"><a href="#">针对第三方的责任保护解决方案</a></h3>
+						<p>MAPFRE Soluciones para la protección de la responsabilidad frente a terceros</p>
+						<p>-公司民事责任 Responsabilidad Civil para Empresas</p>
+						<p>-董事和社会管理者的民事责任 Responsabilidad Civil para Directivos y Administradores Sociales</p>
+						<p>-专业民事责任 Responsabilidad Civil Profesional</p>
+						<p>-农业经营民事责任 Responsabilidad Civil para Explotaciones Agropecuarias</p>
+						<p>-中小企业和个体经营者网络风险保险 Seguro Ciberriesgos Pymes y Autónomos</p>
+						<p>-网络保险 Seguro CiberOn</p>
+						<p>-公司和个体经营者的数据保护保险 Seguro de Protección de Datos para Empresas y Autónomos</p>
 						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="coche.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="mb-0"><a href="terceros.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 							<p class="ml-auto mb-0">
 							</p>
 						</div>
@@ -108,17 +122,21 @@
 
 			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a href="vida.html" class="block-20 d-flex align-items-end" style="background-image: url('vida.jpg');">
+					<a href="personal.html" class="block-20 d-flex align-items-end" style="background-image: url('vida.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">公司业务</span>
-							<span class="yr">生命保险</span>
+							<span class="yr">员工保险</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 href="vida.html" class="heading"><a href="#">MAPFRE生命保险</a></h3>
-						<p >MAPFRE生命保险XXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+						<h3 href="personal.html" class="heading"><a href="#">MAPFRE公司员工保护解决方案</a></h3>
+						<p>MAPFRE Soluciones para la protección del personal de la empresa</p>
+						<p>-人寿险和意外险 Seguros de Vida-Riesgo y Accidentes</p>
+						<p>-医疗保险 Seguro de Salud</p>
+						<p>-养老金计划和退休解决方案 Planes de Pensiones y Soluciones para la Jubilación</p>
+						<p>-公司旅行保险 Seguro de Viaje para Empresas</p>
 						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="vida.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="mb-0"><a href="personal.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 							<p class="ml-auto mb-0">
 							</p>
 						</div>
@@ -128,7 +146,6 @@
 
 		</div>
 	</div>
-
 </section>
 
 
