--- a/investment/mapfre/mapfre_seguro.html
+++ b/investment/mapfre/mapfre_seguro.html
@@ -69,7 +69,7 @@
 
 			<div class="col-md-6 col-lg-4 ftco-animate">
 				<div class="blog-entry">
-					<a href="patrimonio.html" class="block-20 d-flex align-items-end" style="background-image: url('salud.jpg');">
+					<a href="patrimonio.html" class="block-20 d-flex align-items-end" style="background-image: url('1.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">公司业务</span>
 							<span class="yr">资产保险</span>
@@ -95,7 +95,7 @@
 
 			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a href="terceros.html" class="block-20 d-flex align-items-end" style="background-image: url('coche.jpg');">
+					<a href="terceros.html" class="block-20 d-flex align-items-end" style="background-image: url('2.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">公司业务</span>
 							<span class="yr">民事责任保险</span>
@@ -122,7 +122,7 @@
 
 			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a href="personal.html" class="block-20 d-flex align-items-end" style="background-image: url('vida.jpg');">
+					<a href="personal.html" class="block-20 d-flex align-items-end" style="background-image: url('3.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">公司业务</span>
 							<span class="yr">员工保险</span>
