--- a/investment/mapfre/mapfre_seguro.html
+++ b/investment/mapfre/mapfre_seguro.html
@@ -69,14 +69,14 @@
 
 			<div class="col-md-6 col-lg-4 ftco-animate">
 				<div class="blog-entry">
-					<a href="patrimonio.html" class="block-20 d-flex align-items-end" style="background-image: url('1.jpg');">
+					<a href="company/patrimonio.html" class="block-20 d-flex align-items-end" style="background-image: url('1.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">公司业务</span>
 							<span class="yr">资产保险</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="salud.html">MAPFRE资产保护保险</a></h3>
+						<h3 class="heading"><a href="company/patrimonio.html">MAPFRE资产保护保险</a></h3>
 						<p>MAPFRE 资产保护解决方案（Soluciones para la protección del patrimonio）。</p>
 						<p>-工业和服务保险 Seguro para Industrias y Servicios</p>
 						<p>-商业保险 Seguro para Comercios</p>
@@ -86,7 +86,7 @@
 						<p>-建筑保险 Seguros para la Construcción</p>
 						<p>-运输、船体和航空 Transporte, Cascos y Aviación</p>
 						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="patrimonio.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="mb-0"><a href="company/patrimonio.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
 					</div>
 				</div>
@@ -95,14 +95,14 @@
 
 			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a href="terceros.html" class="block-20 d-flex align-items-end" style="background-image: url('2.jpg');">
+					<a href="company/terceros.html" class="block-20 d-flex align-items-end" style="background-image: url('2.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">公司业务</span>
 							<span class="yr">民事责任保险</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 href="terceros.html" class="heading"><a href="#">针对第三方的责任保护解决方案</a></h3>
+						<h3 href="company/terceros.html" class="heading"><a href="#">针对第三方的责任保护解决方案</a></h3>
 						<p>MAPFRE Soluciones para la protección de la responsabilidad frente a terceros</p>
 						<p>-公司民事责任 Responsabilidad Civil para Empresas</p>
 						<p>-董事和社会管理者的民事责任 Responsabilidad Civil para Directivos y Administradores Sociales</p>
@@ -112,7 +112,7 @@
 						<p>-网络保险 Seguro CiberOn</p>
 						<p>-公司和个体经营者的数据保护保险 Seguro de Protección de Datos para Empresas y Autónomos</p>
 						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="terceros.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="mb-0"><a href="company/terceros.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 							<p class="ml-auto mb-0">
 							</p>
 						</div>
@@ -122,21 +122,21 @@
 
 			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a href="personal.html" class="block-20 d-flex align-items-end" style="background-image: url('3.jpg');">
+					<a href="company/personal.html" class="block-20 d-flex align-items-end" style="background-image: url('3.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">公司业务</span>
 							<span class="yr">员工保险</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 href="personal.html" class="heading"><a href="#">MAPFRE公司员工保护解决方案</a></h3>
+						<h3 href="company/personal.html" class="heading"><a href="#">MAPFRE公司员工保护解决方案</a></h3>
 						<p>MAPFRE Soluciones para la protección del personal de la empresa</p>
 						<p>-人寿险和意外险 Seguros de Vida-Riesgo y Accidentes</p>
-						<p>-医疗保险 Seguro de Salud</p>
+						<a href="company/salud.html"><p>-医疗保险 Seguro de Salud</p></a>
 						<p>-养老金计划和退休解决方案 Planes de Pensiones y Soluciones para la Jubilación</p>
 						<p>-公司旅行保险 Seguro de Viaje para Empresas</p>
 						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="personal.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="mb-0"><a href="company/personal.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 							<p class="ml-auto mb-0">
 							</p>
 						</div>
@@ -157,7 +157,8 @@
 		<div class="row">
 			<div class="col-md-12 suscribete_form">
 				<h2>MAPFRE业务介绍</h2>
-				<p class="mb-0">西班牙MAPFRE保险集团成立于1933年，是西班牙以及拉美市场最大的保险集团，全球分公司达244个，分布在39个国家。MAPFRE保险用户数多年来一直排在西班牙首位。</p>
+				<p class="mb-0">西班牙MAPFRE保险集团成立于1933年，是西班牙以及拉美市场最大的保险集团，全球分公司达244个，分布在39个国家。MAPFRE保险用户数多年来一直位于西班牙首位。
+					睿泽国际作为MAPFRE高级合作伙伴，代理MAPFRE公司业务与个人业务，联合MAPFRE为您提供最优质的保险服务。</p>
 			</div>
 		</div>
 	</div>
@@ -170,38 +171,55 @@
 		<div class="row" class = "wrapper">
 
 
-			<div class="col-md-6 col-lg-4 ftco-animate">
+			<div class="col-md-6 col-lg-3 ftco-animate">
 				<div class="blog-entry">
-					<a href="salud.html" class="block-20 d-flex align-items-end" style="background-image: url('salud.jpg');">
+					<a class="block-15 d-flex align-items-end" style="background-image: url('salud.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">个人业务</span>
 							<span class="yr">医疗保险</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="salud.html">MAPFRE医疗保险</a></h3>
-						<p href="salud.html">MAPFRExxxxxxxx。</p>
+						<h3 class="heading"><a>MAPFRE医疗保险</a></h3>
+						<p>MAPFRExxxxxxxx。</p>
 						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="salud.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="mb-0"><a href="https://precio.mapfre.es/calcular-seguro-salud-global/es/fecha-inicio-seguro?PPPO=MINTER&origen=SEM" class="btn btn-secondary">计算保险费用<span class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
 					</div>
 				</div>
 			</div>
 
 
-			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+			<div class="col-md-6 col-lg-3 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a href="coche.html" class="block-20 d-flex align-items-end" style="background-image: url('coche.jpg');">
+					<a  class="block-15 d-flex align-items-end" style="background-image: url('coche.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">个人业务</span>
 							<span class="yr">汽车保险</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 href="coche.html" class="heading"><a href="#">MAPFRE汽车保险</a></h3>
-						<p >MAPFRE汽车保险XXXXXXXXXXXXXXXXX</p>
+						<h3 class="heading"><a>MAPFRE汽车保险</a></h3>
+						<p >MAPFRE汽车保险提供不同的选择：</p>
+						<p >第三方责任险(Terceros)</p>
+<!--						<p >民事责任的强制保护</p>-->
+<!--						<p >出行帮助</p>-->
+<!--						<p >车辆损坏索赔</p>-->
+						<p>第三方责任加强险(Terceros Ampliado)</p>
+<!--						<p>享受基本保险的全部福利</p>-->
+<!--						<p>挡风玻璃和窗户全部或部分破损</p>-->
+<!--						<p>车辆火灾</p>-->
+						<p>Todo Riesgo con Franquicia</p>
+<!--						<p>法律辩护和损害赔偿要求</p>-->
+<!--						<p>民事责任，即使是骑自行车的人</p>-->
+<!--						<p>因故意破坏而造成的车辆损坏</p>-->
+						<p>Todo Riesgo sin Franquicia</p>
+<!--						<p>火灾损害保护</p>-->
+<!--						<p>向驾车者提供援助和法律建议</p>-->
+<!--						<p>固定补偿</p>-->
+
 						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="coche.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="mb-0"><a href="https://precio.mapfre.es/calcular-seguros-coche/codigo-postal?tipoVeh=1&PPPO=MINTER&flujo=fq&origen=SEM" class="btn btn-secondary">计算保险费用<span class="ion-ios-arrow-round-forward"></span></a></p>
 							<p class="ml-auto mb-0">
 							</p>
 						</div>
@@ -209,19 +227,38 @@
 				</div>
 			</div>
 
-			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+			<div class="col-md-6 col-lg-3 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a href="vida.html" class="block-20 d-flex align-items-end" style="background-image: url('vida.jpg');">
+					<a  class="block-15 d-flex align-items-end" style="background-image: url('vida.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">个人业务</span>
 							<span class="yr">生命保险</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 href="vida.html" class="heading"><a href="#">MAPFRE生命保险</a></h3>
+						<h3 class="heading"><a>MAPFRE生命保险</a></h3>
 						<p >MAPFRE生命保险XXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
 						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="vida.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="mb-0"><a href="https://precio.mapfre.es/calcular-seguro-vida/es/fecha-nacimiento?PPPO=MINTER&pid1=20170113-pmp-neg-menuvidapresurap01%2F" class="btn btn-secondary">计算保险费用<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="ml-auto mb-0">
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-6 col-lg-3 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a class="block-15 d-flex align-items-end" style="background-image: url('hogar.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">个人业务</span>
+							<span class="yr">房屋保险</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="#">MAPFRE房屋保险</a></h3>
+						<p >MAPFRE生命保险XXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="https://precio.mapfre.es/calcular-seguro-hogar/es/direccion?PPPO=MINTER&flujo=fq&origen=SEM" class="btn btn-secondary">计算保险费用<span class="ion-ios-arrow-round-forward"></span></a></p>
 							<p class="ml-auto mb-0">
 							</p>
 						</div>
