add huawei investment page

--- a/about.html
+++ b/about.html
@@ -134,56 +134,56 @@
 
 
 
-<section class="ftco-section contact-section">
-	<div class="container">
-		<div class="row d-flex mb-5 contact-info">
-			<div class="col-md-3 d-flex">
-				<div class="bg-light align-items-stretch box p-4 text-center">
-					<div>
-						<img src="images/ceo.jpg" alt = "" width="100%" height="100%" style="align-items: center">
-						<h2 class="mb-4">CEO</h2>
-						<h3>Yanik Yang</h3>
-						<p>西班牙唯一具有欧洲金融投资顾问执照EFA华人，具有西班牙保荐人资格，中文、英文、西语、法语、专业投资理财服务。</p>
-					</div>
+<!--<section class="ftco-section contact-section">-->
+<!--	<div class="container">-->
+<!--		<div class="row d-flex mb-5 contact-info">-->
+<!--			<div class="col-md-3 d-flex">-->
+<!--				<div class="bg-light align-items-stretch box p-4 text-center">-->
+<!--					<div>-->
+<!--						<img src="images/ceo.jpg" alt = "" width="100%" height="100%" style="align-items: center">-->
+<!--						<h2 class="mb-4">CEO</h2>-->
+<!--						<h3>Yanik Yang</h3>-->
+<!--						<p>西班牙唯一具有欧洲金融投资顾问执照EFA华人，具有西班牙保荐人资格，中文、英文、西语、法语、专业投资理财服务。</p>-->
+<!--					</div>-->
 
-				</div>
-			</div>
-			<div class="col-md-3 d-flex">
-				<div class="bg-light align-items-stretch box p-4 text-center">
-					<div>
-						<img src="images/cto.jpg" alt = "" width="100%" height="100%" style="align-items: center">
-						<h2 class="mb-4">CTO</h2>
-						<h3>Lisa Hu</h3>
-						<p>高级IT工程师</p>
-						<p>资深设计师</p>
-						<p>国家一级注册建筑师</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-3 d-flex">
-				<div class="bg-light align-items-stretch box p-4 text-center">
-					<div>
-						<img src="images/cmo.jpg" alt = "" width="100%" height="100%" style="align-items: center">
-						<h2 class="mb-4">CMO</h2>
-						<h3>Teresa Zhang</h3>
-						<p>高级活动策划专家</p>
-						<p>Digital Marketing专家</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-3 d-flex">
-				<div class="bg-light align-items-stretch box p-4 text-center">
-					<div>
-						<img src="images/cmo.jpg" alt = "" width="100%" height="100%" style="align-items: center">
-						<h2 class="mb-4">CMO</h2>
-						<h3>Lisa Hu</h3>
-					</div>
-				</div>
-			</div>
+<!--				</div>-->
+<!--			</div>-->
+<!--			<div class="col-md-3 d-flex">-->
+<!--				<div class="bg-light align-items-stretch box p-4 text-center">-->
+<!--					<div>-->
+<!--						<img src="images/cto.jpg" alt = "" width="100%" height="100%" style="align-items: center">-->
+<!--						<h2 class="mb-4">CTO</h2>-->
+<!--						<h3>Lisa Hu</h3>-->
+<!--						<p>高级IT工程师</p>-->
+<!--						<p>资深设计师</p>-->
+<!--						<p>国家一级注册建筑师</p>-->
+<!--					</div>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--			<div class="col-md-3 d-flex">-->
+<!--				<div class="bg-light align-items-stretch box p-4 text-center">-->
+<!--					<div>-->
+<!--						<img src="images/cmo.jpg" alt = "" width="100%" height="100%" style="align-items: center">-->
+<!--						<h2 class="mb-4">CMO</h2>-->
+<!--						<h3>Teresa Zhang</h3>-->
+<!--						<p>高级活动策划专家</p>-->
+<!--						<p>Digital Marketing专家</p>-->
+<!--					</div>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--			<div class="col-md-3 d-flex">-->
+<!--				<div class="bg-light align-items-stretch box p-4 text-center">-->
+<!--					<div>-->
+<!--						<img src="images/cmo.jpg" alt = "" width="100%" height="100%" style="align-items: center">-->
+<!--						<h2 class="mb-4">CMO</h2>-->
+<!--						<h3>Lisa Hu</h3>-->
+<!--					</div>-->
+<!--				</div>-->
+<!--			</div>-->
 
-		</div>
-	</div>
-</section>
+<!--		</div>-->
+<!--	</div>-->
+<!--</section>-->
 
 <section class="ftco-section ftco-counter img" id="section-counter" style="background-image: url(images/image_5.jpg);" data-stellar-background-ratio="0.5">
 	<div class="container">
