--- a/investment/investment/asset_projects.html
+++ b/investment/investment/asset_projects.html
@@ -66,7 +66,7 @@
 
 <section class="ftco-section bg-light">
 	<div class="container">
-		<div id = "rowBlogs" class="row" class = "wrapper">
+		<div  class="row wrapper">
 
 
 			<div class="col-md-6 col-lg-4 ftco-animate">
@@ -79,11 +79,12 @@
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a>与西班牙全牌照基金公司Solventis联合推出</a></h3>
-						<p href="fund.html">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
-						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="fund.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-						</div>
+						<h3 class="heading"><a>稳定固定收益债券型投资基金</a></h3>
+						<p>基金收益约3.65%，投资欧洲国债和投资级欧美知名高级企业债，最低风险级别</p>
+
+<!--						<div class="d-flex align-items-center mt-4">-->
+<!--							<p class="mb-0"><a href="fund.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>-->
+<!--						</div>-->
 					</div>
 				</div>
 			</div>
@@ -99,13 +100,9 @@
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 href="" class="heading"><a href="#">全球资产配置</a></h3>
-						<p >XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
-						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="fund.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-							<p class="ml-auto mb-0">
-							</p>
-						</div>
+						<h3 href="" class="heading"><a href="#">资产规划全球资产配置</a></h3>
+						<p>根据客户对风险的承受能力，对高净值客户的资产规划目的，量身定制适合的金融资产配置计划，在实现收益目标的同时控制风险。</p>
+						<p>可以为HNW客户提供全球5000支基金，几乎覆盖所有地区和行业，以及复杂的ETF 和其他投资基金，实现风险的最佳分散效果，同时可以为不同类型客户提供各种稳定的低收益到波动较大的高收益的投资方案。</p>
 					</div>
 				</div>
 			</div>
@@ -116,21 +113,25 @@
 					<a  class="block-20 d-flex align-items-end" style="background-image: url('global.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">New</span>
-							<span class="day">xxxxx</span>
-							<span class="yr">30万欧元起</span>
+							<span class="day">金融资产顾问</span>
+							<span class="yr">50万欧元起</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="#">XXXXXXXXXXXXXXXX</a></h3>
-						<p>XXXXXXXXXXXXXXXX</p>
-						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="fund.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-						</div>
+						<h3 class="heading"><a href="#">高净值客户的金融资产顾问咨询</a></h3>
+						<p>免费为50万欧元以上的HNW客户提供咨询，做全球投资分析并提供资产或投资计划和方案。</p>
+						<p>为HNW客户的资产收益提供有效合法避税方案，实现财富的安全保值和不断增值</p>
+
 					</div>
 				</div>
 			</div>
-
 		</div>
+
+		<div  class="row wrapper">
+			<h3 class="heading"><a>风险等级示意图</a></h3>
+			<img src="fund1.jpg">
+		</div>
+	</div>
 </section>
 
 
