--- a/investment/investment/investment_projects.html
+++ b/investment/investment/investment_projects.html
@@ -71,66 +71,66 @@
 
 			<div class="col-md-6 col-lg-4 ftco-animate">
 				<div class="blog-entry">
-					<a href="https://www.vivo.com/es/products/x90-pro" class="block-20 d-flex align-items-end" style="background-image: url('vivo/x90pro.jpg');">
+					<a href="cases/case_therm.html" class="block-20 d-flex align-items-end" style="background-image: url('case_therm.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">New</span>
-							<span class="day">1099€</span>
-							<span class="yr">5台起售</span>
+							<span class="yr">2023</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="https://www.vivo.com/es/products/x90-pro">VIVO X90 Pro</a></h3>
-						<p href="products/mobile/mobile.html">VIVO X系列2023新款高档旗舰机，团购价低于市场售价10%，5台起售，产品参数请VIVO查看官网。</p>
+						<h3 href="cases/case_therm.html" class="heading"><a >高效节能热能转换国际专利项目</a></h3>
+						<p>热能转换技术可将工业废热转换为清洁可持续能源。</p>
 						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="https://www.vivo.com/es/products/x90-pro" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="mb-0"><a href="cases/case_therm.html" class="btn btn-secondary">查看项目详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
 					</div>
 				</div>
 			</div>
-
-
-			<div id = "dBlogs" class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
-				<div class="blog-entry">
-					<a href="https://www.vivo.com/es/products/v29-lite-5g" class="block-20 d-flex align-items-end" style="background-image: url('vivo/v29lite_1.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">NEW</span>
-							<span class="day">359€</span>
-							<span class="yr">5台起售</span>
-						</div>
-					</a>
-					<div class="text bg-white p-4">
-						<h3 href="https://www.vivo.com/es/products/v29-lite-5g" class="heading"><a href="#">VIVO V29 Lite</a></h3>
-						<p >VIVO 2023年新款中档机型，团购价低于市场售价10%，5台起售，产品参数请VIVO查看官网。</p>
-						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="https://www.vivo.com/es/products/v29-lite-5g" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-							<p class="ml-auto mb-0">
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-
 
 			<div class="col-md-6 col-lg-4 ftco-animate">
 				<div class="blog-entry">
-					<a href="https://www.vivo.com/es/products/y35" class="block-20 d-flex align-items-end" style="background-image: url('vivo/y35.jpg');">
+					<a href="cases/case_charging.html" class="block-20 d-flex align-items-end" style="background-image: url('case_charging.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">New</span>
-							<span class="day">235€</span>
-							<span class="yr">5台起售</span>
+							<span class="yr">2023</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 href="https://www.vivo.com/es/products/y35" class="heading"><a href="#">VIVO Y35</a></h3>
-						<p>VIVO Y系列2023新款低档旗舰机，团购价低于市场售价10%，5台起售，产品参数请VIVO查看官网。</p>
+						<h3 href="cases/case_charging.html" class="heading"><a>充电桩项目</a></h3>
+						<p>西班牙市场排名前茅充电桩运营公司，融资需求≥1000万欧元， 可提供≥20%股权，投资利润率很高，保守估算20%。</p>
+						<p>目前的电动车配套设施，在整个西欧西班牙的充电桩数量最少，存在巨大的市场空间。西班牙电动车行业，正值风口，巨大的风刚刚吹起。</p>
+
 						<div class="d-flex align-items-center mt-4">
-							<p  class="mb-0"><a href="https://www.vivo.com/es/products/y35" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="mb-0"><a href="cases/case_charging.html" class="btn btn-secondary">查看项目详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-6 col-lg-4 ftco-animate">
+				<div class="blog-entry">
+					<a href="cases/case_parking.html" class="block-20 d-flex align-items-end" style="background-image: url('case_parking.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">New</span>
+							<span class="yr">2023</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 href="cases/case_parking.html" class="heading"><a >加泰罗尼亚停车场出售项目</a></h3>
+						<p>Parking I：</p>
+						<p>274个车位，150已租车位abonos,112可租车位，12暂转让，位置：市中心</p>
+						<p>Parking II：</p>
+						<p>301 个车位，129已租车位abonos，104可租车位，68暂转让，位置：市内主街Plaza</p>
+						<p></p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="cases/case_parking.html" class="btn btn-secondary">查看项目详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
 					</div>
 				</div>
 			</div>
 
 		</div>
+	</div>
 </section>
 
 
