--- a/ittech/network/network.html
+++ b/ittech/network/network.html
@@ -64,22 +64,22 @@
 	<div class="container">
 		<div class="row" class = "wrapper">
 
-			<div class="col-md-5 col-lg-6 ftco-animate" class = "wrapper" style="align-items: center">
-				<div class="blog-entry">
-					<a href="huawei/huaweinetwork.html" class="block-20 d-flex align-items-end" style="background-image: url('../../ittech/network/huawei/1.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="yr">NEW</span>
-						</div>
-					</a>
-					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="huawei/huaweinetwork.html">华为企业网解决方案</a></h3>
-						<p>引领数字基础设施，共创行业新价值。携手伙伴，深入场景，为客户创造价值，以创新基础设施，释放数字生产力。</p>
-					</div>
-				</div>
-			</div>
+<!--			<div class="col-md-5 col-lg-6 ftco-animate" class = "wrapper" style="align-items: center">-->
+<!--				<div class="blog-entry">-->
+<!--					<a href="huawei/huaweinetwork.html" class="block-20 d-flex align-items-end" style="background-image: url('../../ittech/network/huawei/1.jpg');">-->
+<!--						<div class="meta-date text-center p-2">-->
+<!--							<span class="yr">NEW</span>-->
+<!--						</div>-->
+<!--					</a>-->
+<!--					<div class="text bg-white p-4">-->
+<!--						<h3 class="heading"><a href="huawei/huaweinetwork.html">华为企业网解决方案</a></h3>-->
+<!--						<p>引领数字基础设施，共创行业新价值。携手伙伴，深入场景，为客户创造价值，以创新基础设施，释放数字生产力。</p>-->
+<!--					</div>-->
+<!--				</div>-->
+<!--			</div>-->
 
 
-			<div class="col-md-5 col-lg-6 ftco-animate">
+			<div class="col-md-5 col-lg-12 ftco-animate">
 				<div class="blog-entry">
 					<a href="ruijie/ruijienwtwork.html" class="block-20 d-flex align-items-end" style="background-image: url('../../ittech/network/ruijie/1.jpg');">
 						<div class="meta-date text-center p-2">
