--- a/ittech/security/security.html
+++ b/ittech/security/security.html
@@ -64,7 +64,7 @@
 	<div class="container">
 		<div class="row wrapper">
 
-			<div class="col-md-5 col-lg-6 ftco-animate wrapper" style="align-items: center">
+			<div class="col-md-5 col-lg-12 ftco-animate wrapper" style="align-items: center">
 				<div class="blog-entry">
 					<a href="hikvision/hikvision.html" class="block-20 d-flex align-items-end" style="background-image: url('../../ittech/security/hikvision/1.jpg');">
 						<div class="meta-date text-center p-2">
@@ -79,19 +79,19 @@
 			</div>
 
 
-			<div class="col-md-5 col-lg-6 ftco-animate">
-				<div class="blog-entry">
-					<a href="dahua/dahua.html" class="block-20 d-flex align-items-end" style="background-image: url('../../ittech/security/dahua/1.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="yr">NEW</span>
-						</div>
-					</a>
-					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="dahua/dahua.html">大华</a></h3>
-						<p>浙江大华技术股份有限公司是领先的监控产品供应商和解决方案服务商，面向全球提供领先的视频存储、前端、显示控制和智能交通等系列化产品。</p>
-					</div>
-				</div>
-			</div>
+<!--			<div class="col-md-5 col-lg-6 ftco-animate">-->
+<!--				<div class="blog-entry">-->
+<!--					<a href="dahua/dahua.html" class="block-20 d-flex align-items-end" style="background-image: url('../../ittech/security/dahua/1.jpg');">-->
+<!--						<div class="meta-date text-center p-2">-->
+<!--							<span class="yr">NEW</span>-->
+<!--						</div>-->
+<!--					</a>-->
+<!--					<div class="text bg-white p-4">-->
+<!--						<h3 class="heading"><a href="dahua/dahua.html">大华</a></h3>-->
+<!--						<p>浙江大华技术股份有限公司是领先的监控产品供应商和解决方案服务商，面向全球提供领先的视频存储、前端、显示控制和智能交通等系列化产品。</p>-->
+<!--					</div>-->
+<!--				</div>-->
+<!--			</div>-->
 
 
 		</div>
