--- a/products/security/security.html
+++ b/products/security/security.html
@@ -69,7 +69,7 @@
 	<div class="container">
 		<div class="row wrapper">
 
-			<div class="col-md-5 col-lg-6 ftco-animate wrapper" style="align-items: center">
+			<div class="col-md-5 col-lg-12 ftco-animate wrapper" style="align-items: center">
 				<div class="blog-entry">
 					<a href="hikvision/hikvision.html" class="block-20 d-flex align-items-end" style="background-image: url('../../ittech/security/hikvision/1.jpg');">
 						<div class="meta-date text-center p-2">
@@ -84,19 +84,19 @@
 			</div>
 
 
-			<div class="col-md-5 col-lg-6 ftco-animate">
-				<div class="blog-entry">
-					<a href="dahua/dahua.html" class="block-20 d-flex align-items-end" style="background-image: url('../../ittech/security/dahua/1.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="yr">NEW</span>
-						</div>
-					</a>
-					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="dahua/dahua.html">大华</a></h3>
-						<p>浙江大华技术股份有限公司是领先的监控产品供应商和解决方案服务商，面向全球提供领先的视频存储、前端、显示控制和智能交通等系列化产品。</p>
-					</div>
-				</div>
-			</div>
+<!--			<div class="col-md-5 col-lg-6 ftco-animate">-->
+<!--				<div class="blog-entry">-->
+<!--					<a href="dahua/dahua.html" class="block-20 d-flex align-items-end" style="background-image: url('../../ittech/security/dahua/1.jpg');">-->
+<!--						<div class="meta-date text-center p-2">-->
+<!--							<span class="yr">NEW</span>-->
+<!--						</div>-->
+<!--					</a>-->
+<!--					<div class="text bg-white p-4">-->
+<!--						<h3 class="heading"><a href="dahua/dahua.html">大华</a></h3>-->
+<!--						<p>浙江大华技术股份有限公司是领先的监控产品供应商和解决方案服务商，面向全球提供领先的视频存储、前端、显示控制和智能交通等系列化产品。</p>-->
+<!--					</div>-->
+<!--				</div>-->
+<!--			</div>-->
 
 
 		</div>
@@ -136,54 +136,6 @@
 		</div>
 	</div>
 </section>
-
-
-
-
-
-<!--<section class="ftco-gallery">-->
-<!--	<div class="container-wrap">-->
-<!--		<div class="row no-gutters">-->
-<!--			<div class="col-md-3 ftco-animate">-->
-<!--				<a href="../../images/image_1.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(../../images/image_1.jpg);">-->
-<!--					<div class="icon mb-4 d-flex align-items-center justify-content-center">-->
-<!--						<span class="icon-instagram"></span>-->
-<!--					</div>-->
-<!--				</a>-->
-<!--			</div>-->
-<!--			<div class="col-md-3 ftco-animate">-->
-<!--				<a href="../../images/image_2.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(../../images/image_2.jpg);">-->
-<!--					<div class="icon mb-4 d-flex align-items-center justify-content-center">-->
-<!--						<span class="icon-instagram"></span>-->
-<!--					</div>-->
-<!--				</a>-->
-<!--			</div>-->
-
-<!--			<div class="col-md-3 ftco-animate">-->
-<!--				<a href="../../images/image_2.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(../../images/image_2.jpg);">-->
-<!--					<div class="icon mb-4 d-flex align-items-center justify-content-center">-->
-<!--						<span class="icon-instagram"></span>-->
-<!--					</div>-->
-<!--				</a>-->
-<!--			</div>-->
-
-<!--			<div class="col-md-3 ftco-animate">-->
-<!--				<a href="../../images/image_2.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(../../images/image_2.jpg);">-->
-<!--					<div class="icon mb-4 d-flex align-items-center justify-content-center">-->
-<!--						<span class="icon-instagram"></span>-->
-<!--					</div>-->
-<!--				</a>-->
-<!--			</div>-->
-<!--		</div>-->
-<!--	</div>-->
-<!--</section>-->
-
-
-
-
-
-
-
 
 
 
