--- a/investment/mapfre/mapfre_seguro.html
+++ b/investment/mapfre/mapfre_seguro.html
@@ -85,9 +85,9 @@
 						<p>-机械电子设备 Maquinaria y Equipos Electrónicos</p>
 						<p>-建筑保险 Seguros para la Construcción</p>
 						<p>-运输、船体和航空 Transporte, Cascos y Aviación</p>
-						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="company/patrimonio.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-						</div>
+<!--						<div class="d-flex align-items-center mt-4">-->
+<!--							<p class="mb-0"><a href="company/patrimonio.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>-->
+<!--						</div>-->
 					</div>
 				</div>
 			</div>
@@ -111,11 +111,11 @@
 						<p>-中小企业和个体经营者网络风险保险 Seguro Ciberriesgos Pymes y Autónomos</p>
 						<p>-网络保险 Seguro CiberOn</p>
 						<p>-公司和个体经营者的数据保护保险 Seguro de Protección de Datos para Empresas y Autónomos</p>
-						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="company/terceros.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-							<p class="ml-auto mb-0">
-							</p>
-						</div>
+<!--						<div class="d-flex align-items-center mt-4">-->
+<!--							<p class="mb-0"><a href="company/terceros.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>-->
+<!--							<p class="ml-auto mb-0">-->
+<!--							</p>-->
+<!--						</div>-->
 					</div>
 				</div>
 			</div>
@@ -135,11 +135,11 @@
 						<a href="company/salud.html"><p>-医疗保险 Seguro de Salud</p></a>
 						<p>-养老金计划和退休解决方案 Planes de Pensiones y Soluciones para la Jubilación</p>
 						<p>-公司旅行保险 Seguro de Viaje para Empresas</p>
-						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="company/personal.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-							<p class="ml-auto mb-0">
-							</p>
-						</div>
+<!--						<div class="d-flex align-items-center mt-4">-->
+<!--							<p class="mb-0"><a href="company/personal.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>-->
+<!--							<p class="ml-auto mb-0">-->
+<!--							</p>-->
+<!--						</div>-->
 					</div>
 				</div>
 			</div>
@@ -181,7 +181,7 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a>MAPFRE医疗保险</a></h3>
-						<p>MAPFRExxxxxxxx。</p>
+						<p>MAPFRE医疗保险根据客户需求有不同的类型的保险，为您提供便捷的服务，包含了西班牙各专科医院医生以及西班牙最好的私立医院。</p>
 						<div class="d-flex align-items-center mt-4">
 							<p class="mb-0"><a href="https://precio.mapfre.es/calcular-seguro-salud-global/es/fecha-inicio-seguro?PPPO=MINTER&origen=SEM" class="btn btn-secondary">计算保险费用<span class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
@@ -232,12 +232,12 @@
 					<a  class="block-15 d-flex align-items-end" style="background-image: url('vida.jpg');">
 						<div class="meta-date text-center p-2">
 							<span class="day">个人业务</span>
-							<span class="yr">生命保险</span>
+							<span class="yr">人寿保险</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a>MAPFRE生命保险</a></h3>
-						<p >MAPFRE生命保险XXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+						<h3 class="heading"><a>MAPFRE人寿保险</a></h3>
+						<p >MAPFRE人寿保险是人身保险的一种，以被保险人的寿命为保险标的，且以被保险人的生存或死亡为给付条件的人身保险。 和所有保险业务一样，被保险人将风险转嫁给保险人，接受保险人的条款并支付保险费。 </p>
 						<div class="d-flex align-items-center mt-4">
 							<p class="mb-0"><a href="https://precio.mapfre.es/calcular-seguro-vida/es/fecha-nacimiento?PPPO=MINTER&pid1=20170113-pmp-neg-menuvidapresurap01%2F" class="btn btn-secondary">计算保险费用<span class="ion-ios-arrow-round-forward"></span></a></p>
 							<p class="ml-auto mb-0">
@@ -256,7 +256,7 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a href="#">MAPFRE房屋保险</a></h3>
-						<p >MAPFRE生命保险XXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+						<p >MAPFRE房屋保险为您提供最安心的家，除了房屋基础设施保险外，根据您的需求可以购买更高端的保险，其中覆盖了报警、财务损失赔偿等。</p>
 						<div class="d-flex align-items-center mt-4">
 							<p class="mb-0"><a href="https://precio.mapfre.es/calcular-seguro-hogar/es/direccion?PPPO=MINTER&flujo=fq&origen=SEM" class="btn btn-secondary">计算保险费用<span class="ion-ios-arrow-round-forward"></span></a></p>
 							<p class="ml-auto mb-0">
