--- a/ittech/cloud/cloud.html
+++ b/ittech/cloud/cloud.html
@@ -66,7 +66,7 @@
 	<div class="container">
 		<div class="row" class = "wrapper">
 
-			<div class="col-md-5 col-lg-6 ftco-animate" class = "wrapper" style="align-items: center">
+			<div class="col-md-5 col-lg-12 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
 					<a href="huawei/huaweicloud.html" class="block-20 d-flex align-items-end" style="background-image: url('../../ittech/cloud/huawei/huaweicloud.jpg');">
 						<div class="meta-date text-center p-2">
@@ -85,21 +85,21 @@
 			</div>
 
 
-			<div class="col-md-5 col-lg-6 ftco-animate">
-				<div class="blog-entry">
-					<a href="orange/orangecloud.html" class="block-20 d-flex align-items-end" style="background-image: url('../../ittech/cloud/orange/1.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="yr">助力跨国公司走向全球</span>
-						</div>
-					</a>
-					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="orange/orangecloud.html">Orange云</a></h3>
-						<p>Orange Business Services，作为法国知名电信运营商Orange旗下的B2B分支机构，Orange Business Services扮演着网络运营商和数字服务集成商的角色，
-							在IoT、云计算、大数据和人工智能、应用开发和网络安全等领域提供专业服务。
-							Orange Business Services长期重视创新技术，业务涵盖云技术、数字化与数据、网络、智能移动服务等多个领域，是拥有多源服务集成（MSI）专业能力的全球运营商级集成商。</p>
-					</div>
-				</div>
-			</div>
+<!--			<div class="col-md-5 col-lg-6 ftco-animate">-->
+<!--				<div class="blog-entry">-->
+<!--					<a href="orange/orangecloud.html" class="block-20 d-flex align-items-end" style="background-image: url('../../ittech/cloud/orange/1.jpg');">-->
+<!--						<div class="meta-date text-center p-2">-->
+<!--							<span class="yr">助力跨国公司走向全球</span>-->
+<!--						</div>-->
+<!--					</a>-->
+<!--					<div class="text bg-white p-4">-->
+<!--						<h3 class="heading"><a href="orange/orangecloud.html">Orange云</a></h3>-->
+<!--						<p>Orange Business Services，作为法国知名电信运营商Orange旗下的B2B分支机构，Orange Business Services扮演着网络运营商和数字服务集成商的角色，-->
+<!--							在IoT、云计算、大数据和人工智能、应用开发和网络安全等领域提供专业服务。-->
+<!--							Orange Business Services长期重视创新技术，业务涵盖云技术、数字化与数据、网络、智能移动服务等多个领域，是拥有多源服务集成（MSI）专业能力的全球运营商级集成商。</p>-->
+<!--					</div>-->
+<!--				</div>-->
+<!--			</div>-->
 
 
 		</div>
